--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+,"predeploy": "npm run build",
+  "deploy": "gh-pages -d build" },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
-}
+ ,"homepage": "http://yuri-barone.github.io/delicio"}
