--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "dependencies": {
     "@material-ui/core": "^1.5.1",
     "@material-ui/icons": "^2.0.3",
+    "animated-scroll-to": "^1.2.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-scroll-horizontal": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-,"predeploy": "npm run build",
-  "deploy": "gh-pages -d build" },
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "devDependencies": {
     "gh-pages": "^1.2.0"
-  }
- ,"homepage": "http://yuri-barone.github.io/delicio"}
+  },
+  "homepage": "http://yuri-barone.github.io/delicio"
+}
