--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
-"homepage": "http://yuri-barone.github.io/delicio","version": "0.1.0",
+  "homepage": "http://yuri-barone.github.io/delicio",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.5.1",
@@ -9,18 +10,18 @@
     "animated-scroll-to": "^1.2.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5", "react-scroll-horizontal": "^1.5.1"
+    "react-scripts": "1.1.5",
+    "react-scroll-horizontal": "^1.5.1"
   },
   "scripts": {
- "predeploy": "npm run build", "deploy": "gh-pages -d build", "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
-  },
-  "homepage": "http://yuri-barone.github.io/delicio"
+  }
 }
