--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "react-scroll-horizontal": "^1.5.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "npm run build", "build": "react-scripts build",
+ "deploy": "gh-pages -d build",
+    "start": "react-scripts start", "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
