--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "predeploy": "npm run build", "build": "react-scripts build",
- "deploy": "gh-pages -d build",
-    "start": "react-scripts start", "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
